<resources>
    <string name="app_name">HomeTown Locations</string>
    <string name="nickname">Nick Name</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="year_label">Year :</string>
    <string name="year">Year</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="country_list_title">Select Country</string>
    <string name="state_list_title">Select State</string>
    <string name="set">Search</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="add_user_info">Add Information</string>
    <string name="add_location">Add Location</string>
    <string name="address">Address :</string>
    <string name="change_password">Change Password</string>
    <string name="view">View Friends</string>
    <string name="set_location">Set Home Town Location</string>
    <string name="on_map">Locate users on map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add">Add</string>
    <string name="search_by_country">Search by country</string>
    <string name="search_by_state">Search by state</string>
    <string name="search_by_year">Search by year</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="description">Find out where your friends are from!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
