<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" >
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    map:layout_anchor="@string/add_location"
    tools:context="com.sdsu.deepak.sdsuhometownlocations.MapsActivity" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal">
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:text="@string/save" />
</LinearLayout>

</FrameLayout>
